--- a/index.html
+++ b/index.html
@@ -139,6 +139,23 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="secondary-bg">
+      <div class="footer-column">
+        <h3 class="section-title">Lets Connect</h3>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <a href=""><img src="/images/icons/facebook.png" alt=""></a>
+        <a href=""><img src="/images/icons/insta.png" alt=""></a>
+        <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+      </div>
+      <div class="footer-column">
+        <h3 class="section-title">Lets Message Me</h3>
+        <form action="">
+          <input type="text" name="" id="same" placeholder="Your name">
+          <input type="email" name="" id="same" placeholder="Your Email">
+          <textarea name="" id="same" cols="30" rows="7" placeholder="Message"></textarea>
+          <button class="btn-primary">Submit</button>
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
