--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/d8d3f54557.js" crossorigin="anonymous"></script>
   </head>
   <body class="open-sans-normal">
     <header class="header secondary-bg">
@@ -29,17 +30,26 @@
         <div class="banner-content">
           <h4 class="banner-greetings dark-2">Hi, I am</h4>
           <h1 class="banner-title">Mary Hardy</h1>
-          <p class="dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <p class="dark-3">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+          <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
-        <img class="banner-profile-pic" src="/images/hardy.png" alt="">
+        <img class="banner-profile-pic" src="/images/hardy.png" alt="" />
       </div>
     </header>
     <main>
       <section class="about secondary-bg">
         <h3 class="section-title">About Me</h3>
-        <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        <p class="section-description">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
         <div class="about-items">
           <div class="about-item">
             <p class="item-title">Name:</p>
@@ -61,28 +71,49 @@
       </section>
       <section class="skills">
         <h3 class="section-title">What I Do</h3>
-        <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        <p class="section-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
 
         <div class="skills-container">
           <div class="skill">
-            <img src="/images/icons/js.png" alt="">
+            <img src="/images/icons/js.png" alt="" />
             <h4 class="skill-title">Vanila JavaScript</h4>
-            <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-des">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/react.png" alt="">
+            <img src="/images/icons/react.png" alt="" />
             <h4 class="skill-title">react</h4>
-            <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-des">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/nodejs.png" alt="">
+            <img src="/images/icons/nodejs.png" alt="" />
             <h4 class="skill-title">Node.js</h4>
-            <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-des">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
           <div class="skill">
-            <img src="/images/icons/mongo.png" alt="">
+            <img src="/images/icons/mongo.png" alt="" />
             <h4 class="skill-title">MongoDB</h4>
-            <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            <p class="skill-des">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
           </div>
         </div>
       </section>
@@ -95,21 +126,31 @@
             <div class="experience">
               <h4 class="ex-title">Master in Computer Engineering</h4>
               <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
-                <hr>
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+              <hr />
             </div>
             <div class="experience">
               <h4 class="ex-title">Master in Computer Engineering</h4>
               <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div> <hr>
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+              <hr />
             </div>
             <div class="experience">
               <h4 class="ex-title">Master in Computer Engineering</h4>
               <h5 class="ex-subtitle">Harvard University / 2015 - 2017</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div> 
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
           </div>
           <div class="resume-column">
@@ -117,42 +158,64 @@
             <div class="experience">
               <h4 class="ex-title">Sr. Font End Developer</h4>
               <h5 class="ex-subtitle">Apple Inc / 2020 - Current</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div> <hr>
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+              <hr />
             </div>
             <div class="experience">
               <h4 class="ex-title">Jr. Font End Developer</h4>
               <h5 class="ex-subtitle">Dribbble Inc / 2018 - 2022</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div> <hr>
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+              <hr />
             </div>
             <div class="experience">
               <h4 class="ex-title">HTML Developer</h4>
               <h5 class="ex-subtitle">Adobe Inc / 2017 - 2018</h5>
-              <div class="ex-des">List skill/technologies here. You can change the icon above 
-                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div> 
+              <div class="ex-des">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
             </div>
           </div>
         </div>
         <div class="resume-btn">
-          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
         </div>
       </section>
     </main>
     <footer class="secondary-bg">
       <div class="footer-column">
         <h3 class="section-title">Lets Connect</h3>
-        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-        <a href=""><img src="/images/icons/facebook.png" alt=""></a>
-        <a href=""><img src="/images/icons/insta.png" alt=""></a>
-        <a href=""><img src="/images/icons/twitter.png" alt=""></a>
+        <p>
+          Please fill out the form on this section to contact with me or call
+          between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+        </p>
+        <a href=""><img src="/images/icons/facebook.png" alt="" /></a>
+        <a href=""><img src="/images/icons/insta.png" alt="" /></a>
+        <a href=""><img src="/images/icons/twitter.png" alt="" /></a>
       </div>
       <div class="footer-column">
         <h3 class="section-title">Lets Message Me</h3>
         <form action="">
-          <input type="text" name="" id="same" placeholder="Your name">
-          <input type="email" name="" id="same" placeholder="Your Email">
-          <textarea name="" id="same" cols="30" rows="7" placeholder="Message"></textarea>
+          <input type="text" name="" id="same" placeholder="Your name" />
+          <input type="email" name="" id="same" placeholder="Your Email" />
+          <textarea
+            name=""
+            id="same"
+            cols="30"
+            rows="7"
+            placeholder="Message"
+          ></textarea>
           <button class="btn-primary">Submit</button>
         </form>
       </div>
